Form validation through js regex

--- a/index.html
+++ b/index.html
@@ -18,16 +18,23 @@
         <form id="form" class="px-4 py-3">
             <div class="mb-3">
                 <label for="User name" class="form-label">Name</label>
-                <input type="text" class="form-control" id="username" placeholder="Enter your username" minlength="3">
+                <input type="text" class="form-control" id="username" placeholder="Enter your username">
             </div>
             <div class="mb-3">
                 <label for="Email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email" placeholder="Enter your email" required>
+                <input type="email" class="form-control" id="email" placeholder="Enter your email">
+            </div>
+            <div class="mb-3">
+                <label for="CNIC" class="form-label">CNIC</label>
+                <input type="number" class="form-control" id="cnic" placeholder="Enter your CNIC" >
+            </div>
+            <div class="mb-3">
+                <label for="Age" class="form-label">Age</label>
+                <input type="number" class="form-control" id="age" placeholder="Enter your Age" >
             </div>
             <div class="mb-3">
                 <label for="Password" class="form-label">Password</label>
-                <input type="password" class="form-control" id="password" placeholder="Enter your password"
-                    minlength="8">
+                <input type="password" class="form-control" id="password" placeholder="Enter your password">
             </div>
             <div class="mb-3">
                 <div class="form-check">
