--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+    <link rel="stylesheet" href="form.css">
     <title>Bootstrap Example</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
@@ -26,11 +27,11 @@
             </div>
             <div class="mb-3">
                 <label for="CNIC" class="form-label">CNIC</label>
-                <input type="number" class="form-control" id="cnic" placeholder="Enter your CNIC" >
+                <input type="number" class="form-control" id="cnic" placeholder="Enter your CNIC">
             </div>
             <div class="mb-3">
                 <label for="Age" class="form-label">Age</label>
-                <input type="number" class="form-control" id="age" placeholder="Enter your Age" >
+                <input type="number" class="form-control" id="age" placeholder="Enter your Age">
             </div>
             <div class="mb-3">
                 <label for="Password" class="form-label">Password</label>
